--- a/newindex.html
+++ b/newindex.html
@@ -6,8 +6,8 @@
   
   <body>
     
-    <table style='width:100%;'>
-      <tr><td style='align:left; height:40px;'><span style="color: #cecece; font-size: 135px;">&#x2B22; Powershell and Graph Blog</span></td></tr> 
+    <table style='width:100%; padding:0px; border-collapse: collapse;'>
+      <tr><td style='align:left; height:20px; color:#cecece;'><img src='giraffe1.jpg'> Powershell and Graph Blog</span></td></tr> 
       <tr><td style='height:1px; color:#cecece'></td></tr>
       <tr><td style='align:center;'>Main article... |</td></tr>
     </table>
