--- a/newindex.html
+++ b/newindex.html
@@ -18,7 +18,7 @@ h1 {
     
     <table style='width:100%; padding:0px; border-collapse: collapse;'>
       <tr><td style='align:left; height:25px; color:#cecece;'><img src='giraffe3.png' style='height:55px;padding: 10px;'></td><td style='color:#564c4d;font-size:15px;'>Powershell and Graph Blog</span></td></tr> 
-      <tr><td style='height:1px; color:#cecece'></td></tr>
+      <tr><td style='height:1px; color:#cecece' colspan=2></td></tr>
       <tr><td style='align:center;'>Main article... |</td></tr>
     </table>
     
