--- a/newindex.html
+++ b/newindex.html
@@ -23,7 +23,7 @@ h1 {
   <body>
     
     <table style='width:100%; padding:0px; border-collapse: collapse;'>
-      <tr><td style='align:left; height:25px; width:55px;'><img src='giraffe3.png' style='height:55px;padding: 10px;'></td><td style='color:#564c4d; font-size:25px; font-family:Montserrat, sans-serif; align:left;'>Graph and PowerShell Blog</span></td><td style='color:#564c4d; font-size:15px; font-family:Montserrat, sans-serif; align:right; padding-right:10px;'>Articles | About | Links</td></tr> 
+      <tr><td style='align:left; height:25px; width:55px;'><img src='giraffe3.png' style='height:55px;padding: 10px;'></td><td style='color:#564c4d; width:*%; font-size:25px; font-family:Montserrat, sans-serif; align:left;'>Graph and PowerShell Blog</span></td><td style='color:#564c4d; font-size:15px; font-family:Montserrat, sans-serif; align:right; padding-right:10px;'>Articles | About | Links</td></tr> 
       <tr><td style='height:1px; color:#564c4d; width:100%; border-bottom: 1px solid;' colspan=3></td></tr>
       <tr><td style='align:center; width:100%;' colspan=3>
         
