--- a/newindex.html
+++ b/newindex.html
@@ -34,7 +34,7 @@ h1 {
       <tr><td style='height:1px; color:#564c4d; width:100%; border-bottom: 1px solid;' colspan=2></td></tr>
       <tr><td style='align:center; width:100%;' colspan=2>
         
-        <table style='padding:6px; color:#564c4d; width:800px;'><tr><td>new Main article... |vvdecd</td></tr></table>
+        <table style='padding:6px; color:#564c4d; width:800px;'><tr><td>- new Main article... |vvdecd</td></tr></table>
         
         </td></tr>
     </table> 
