--- a/newindex.html
+++ b/newindex.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Graph and PowrShell Blog</title>
+    <title>Graph and PowerShell Blog</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
