--- a/newindex.html
+++ b/newindex.html
@@ -30,7 +30,7 @@ h1 {
       <tr><td style='height:1px; color:#564c4d; width:100%; border-bottom: 1px solid;' colspan=2></td></tr>
       <tr><td style='text-align:center; width:100%; padding-top:30px; background-color:green' colspan=2>
         d
-        <table style='padding:2px; color:#564c4d;'><tr><td style='font-family:verdana; font-size:22px; color:#564c4d; width:400px;'>Article Headline</div><div style='font-size:12px'>Content...</td></tr></table>
+        <div style='padding:2px; color:#564c4d;'><div style='font-family:verdana; font-size:22px; color:#564c4d; width:400px;'>Article Headline</div><div style='font-size:12px'>Content...</td></div></div>
          
         </td></tr>
     </table> 
