--- a/newindex.html
+++ b/newindex.html
@@ -30,7 +30,8 @@ h1 {
       <tr><td style='height:1px; color:#564c4d; width:100%; border-bottom: 1px solid;' colspan=2></td></tr>
       <tr><td style='text-align:center; width:100%; padding-top:30px; background-color:green' colspan=2>
         d
-        <div style='padding:2px; color:#564c4d;'><div style='font-family:verdana; font-size:22px; color:#564c4d; width:400px;'>Article Headline</div><div style='font-size:12px'>Content...</td></div></div>
+        <div style='font-family:verdana; font-size:22px; color:#564c4d; width:400px; text-align:left'>Article Headline</div>
+        <div style='font-family:verdana; font-size:12px; color:#564c4d; width:400px;'>Content...</td></div>
          
         </td></tr>
     </table> 
