--- a/newindex.html
+++ b/newindex.html
@@ -31,7 +31,7 @@ h1 {
       <tr><td style='text-align:center; width:100%; padding-top:30px; padding-left:30px;' colspan=2>
      
         <div style='font-family:verdana; font-size:22px; color:#564c4d; width:850px; text-align:left;'>Article Headline</div>
-        <div style='font-family:verdana; font-size:12px; color:#564c4d; width:850px;'>Content...</td></div>
+        <div style='font-family:verdana; font-size:12px; color:#564c4d; width:850px; text-align:left;'>Content...</td></div>
          
         </td></tr>
     </table> 
