--- a/newindex.html
+++ b/newindex.html
@@ -31,10 +31,11 @@ h1 {
       <tr><td style='text-align:center; width:100%; padding-top:30px; padding-left:30px;' colspan=2>
      
         <div style='font-family:verdana; font-size:22px; color:#564c4d; width:850px; text-align:left;'>Cleaning up your Windows DNS server</div>
-        <div style='font-family:verdana; font-size:12px; color:#564c4d; width:850px; text-align:left;'>
+	      <div style='font-family:verdana; font-size:9px; color:#564c4d; width:850px; text-align:left;'>07-Mar-23</div>
+        <div style='font-family:verdana; font-size:12px; color:#564c4d; width:850px; text-align:left;'><br>
           Having contracted at a number of companies over the years I've seen my fair share of horror shows with regards DNS. For something so simple it really does have a lot of importance and should be regularly reviewed.<br>
 		In my latest role the DNS setup was quite simple and I'm happy to report DNS scavaging was enabled, so the majority of records were correct and up-to-date.<br><br>
-		<img src=DNScleanup01.png>
+		<img src=DNScleanup01.png style='border:1px;color:#564c4d;'>
 		<div class=ImageCaption>Scavenging set correctly for the main AD domain zone.</div>
 		<br>
 		So what to check?<br>
