--- a/newindex.html
+++ b/newindex.html
@@ -36,7 +36,7 @@ h1 {
           Having contracted at a number of companies over the years I've seen my fair share of horror shows with regards DNS. For something so simple it really does have a lot of importance and should be regularly reviewed.<br>
 		<br>
 		In my latest role the DNS setup was quite simple and I'm happy to report DNS scavaging was enabled, so the majority of records were correct and up-to-date.<br><br>
-		<img src=DNScleanup01.png style='border:1px;color:#564c4d;'>
+		<img src=DNScleanup01.png style='border-image:1px;color:#564c4d;'>
 		<div class=ImageCaption>Scavenging set correctly for the main AD domain zone.</div>
 		<br>
 		So what to check?<br>
