--- a/newindex.html
+++ b/newindex.html
@@ -24,6 +24,8 @@ h1 {
   display: none;
   position: absolute;
   background-color: #ffffff;
+  font-family:Montserrat, sans-serif;
+  font-size:11px;
   min-width: 160px;
   box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.2);
   padding: 4px 4px;
@@ -47,7 +49,7 @@ h1 {
 		
 		 
 	<div class="dropdown">
-  <button class="dropbtn">Articles</button>
+		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content">
     <a href="newindex.html">Cleaning up your Windows DNS server</a>
     <a href="#">Link 2</a>
