--- a/newindex.html
+++ b/newindex.html
@@ -23,9 +23,10 @@ h1 {
 .dropdown-content {
   display: none;
   position: absolute;
+  text-align:left;
   background-color: #ffffff;
   font-family:Montserrat, sans-serif;
-  font-size:11px;
+  font-size:12px;
   min-width: 280px;
   box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.2);
   padding: 4px 4px;
