--- a/newindex.html
+++ b/newindex.html
@@ -68,7 +68,7 @@ a.men:hover {color: #447EAE; text-decoration: none;}
   </div>
 </div>	
 		
-		| About | Links</td></tr> 
+		| <a href='about.html' class=men>About</a> | <a href='links.html' class=men>Links</a></td></tr> 
       <tr><td style='height:1px; color:#564c4d; width:100%; border-bottom: 1px solid;' colspan=2></td></tr>
       <tr><td style='text-align:center; width:100%; padding-top:30px; padding-left:30px;' colspan=2>
      
