--- a/newindex.html
+++ b/newindex.html
@@ -14,7 +14,8 @@
 h1 {
         margin-top: 0px;
     }
- 
+	    
+	    .imagecaption { font-style: italic; }
       .dropdown {
   position: relative;
   display: inline-block;
