--- a/newindex.html
+++ b/newindex.html
@@ -64,19 +64,19 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<a href='' class="dropbtn">Articles</a>
   <div class="dropdown-content">
     <a href="newindex.html" class=two>Cleaning up your Windows DNS server</a><br>
-   <a href="oneDriveLocale.html" class=two>Set OneDrive for Business Locale</a>
-	<a href="o365migration.html" class=two>O365 Migration Tips</a>
-	<a href="o365reporting.html" class=two>Reporting on successful Azure logons</a>
-	<a href="iisQueue.html" class=two>IIS Mapi Queue full with NetScaler</a>
-        <a href="o365cert.html" class=two>Secure Office365 reports with a certifificate</a>
-        <a href="graphMail.html" class=two>Using Graph to send emails with inline images</a>
-        <a href="charts.html" class=two>Visualizing Graph data with Google Charts</a>
-        <a href="alwaysOn.html" class=two>Keeping a log of NetScaler AlwaysON connections</a>
-        <a href="DNScleanup.html" class=two>Cleaning up your Windows DNS server</a>
+   <a href="oneDriveLocale.html" class=two>Set OneDrive for Business Locale</a><br>
+	<a href="o365migration.html" class=two>O365 Migration Tips</a><br>
+	<a href="o365reporting.html" class=two>Reporting on successful Azure logons</a><br>
+	<a href="iisQueue.html" class=two>IIS Mapi Queue full with NetScaler</a><br>
+        <a href="o365cert.html" class=two>Secure Office365 reports with a certifificate</a><br>
+        <a href="graphMail.html" class=two>Using Graph to send emails with inline images</a><br>
+        <a href="charts.html" class=two>Visualizing Graph data with Google Charts</a><br>
+        <a href="alwaysOn.html" class=two>Keeping a log of NetScaler AlwaysON connections</a><br>
+        <a href="DNScleanup.html" class=two>Cleaning up your Windows DNS server</a><br>
   </div>
 </div>	
 		
-		| <a href='about.html' class=men>About</a> | <a href='links.html' class=men>Links</a></td></tr> 
+		| <a href='about.html' class=two>About</a> | <a href='links.html' class=two>Links</a></td></tr> 
       <tr><td style='height:1px; color:#564c4d; width:100%; border-bottom: 1px solid;' colspan=2></td></tr>
       <tr><td style='text-align:center; width:100%; padding-top:30px; padding-left:30px;' colspan=2>
      
@@ -96,7 +96,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<li>Check if A record has reverse lookup record (PTR) set?</li>
 		<li>With our secondary domain we had spit DNS setup, checks to ensure all records were correct.</li>
 		<br>
-		<img src=DNScleanup02.png>
+		<img src=DNScleanup02.png style='border: 5px solid #564c4d;'>
 		<div class=ImageCaption>Here we use PowerShell to pull the PTR reverse records.</div>
 		<br>
 		What did we find? A few hundred records were wrong:<br>
