--- a/newindex.html
+++ b/newindex.html
@@ -27,7 +27,7 @@ h1 {
   text-align:left;
   background-color: #ffffff;
   font-family:Montserrat, sans-serif;
-  font-size:12px;
+  font-size:13px;
   min-width: 280px;
   box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.2);
   padding: 6px 6px;
@@ -62,7 +62,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		 
 	<div class="dropdown">
 		<a href='' class="dropbtn">Articles</a>
-  <div class="dropdown-content">
+  <div class="dropdown-content" style='line-height: 1.6;'>
     <a href="newindex.html" class=two>Cleaning up your Windows DNS server</a><br>
    <a href="oneDriveLocale.html" class=two>Set OneDrive for Business Locale</a><br>
 	<a href="o365migration.html" class=two>O365 Migration Tips</a><br>
