--- a/o365migration.html
+++ b/o365migration.html
@@ -79,7 +79,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   </div>
 </div>	
 		
-	<a href='about.html' class=two>About</a> | <a href='links.html' class=two>Links</a></td></tr> 
+	| <a href='about.html' class=two>About</a> | <a href='links.html' class=two>Links</a></td></tr> 
       <tr><td style='height:1px; color:#564c4d; width:100%; border-bottom: 1px solid;' colspan=2></td></tr>
       <tr><td style='text-align:center; width:100%; padding-top:30px; padding-left:30px;' colspan=2>
 	      
