--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
       <tr><td style='text-align:center; width:100%; padding-top:30px; padding-left:30px;' colspan=2>
 	       <div class=headline>About</div>
 	      <div class=datestamp>01-Mar-23</div>
-        <div class=headline><br>
+        <div class=content><br>
     	I started this blog to mostly keep a track on various mini projects I have worked on in the last few years. Recent focus has been on PowerShell scripts integrating with MS Graph via an Azure AD App.<br>
           <br><br><b>Certifications</b>
            <table style='padding:4px;'>
