--- a/links.html
+++ b/links.html
@@ -52,6 +52,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	.datestamp { font-family:verdana; font-size:10px; color:#564c4d; width:850px; text-align:left; }
 	.imagecaption { font-style: italic; }
 	.imageMain { border: 5px solid #564c4d; }
+	    .tableContent { font-family:verdana; font-size:12px; color:#564c4d; }
 	    
       </style>
     
@@ -89,12 +90,12 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <div class=content><br>
         A collection of various links.<br><br>
            <table>
-		<tr><td><td style='width:auto; font-size 12px; align:left'><a href='https://www.michev.info/'>Michev Blog</a></td><td style='font-size 12px;align:left''>Advanced PowerShell scripts for Office365</td></tr>
-		<tr><td><td style='width:auto; font-size 12px;'><a href='https://tech.nicolonsky.ch/'>nicolonsky tech</a></td><td style='font-size 12px;align:left''>Great articles on Graph and securing Azure AD environments.</td></tr>
-		<tr><td><td style='width:auto; font-size 12px;'><a href='https://powershell-guru.com/'>PowerShell Guru</a></td><td style='font-size 12px;align:left''>Doesn't seem to be updated much anymore but has some excellent articles on what PowerShell commands are the fastest.</td></tr>
-		<tr><td><td style='width:auto; font-size 12px;'><a href='http://terenceluk.blogspot.com/'>Terence Luk</a></td><td style='font-size 12px;align:left''>Good insites into Exchange and NetScaler, also has articles on Teams.</td></tr>
-		<tr><td><td style='width:auto; font-size 12px;'><a href='https://blog.joeware.net/'>Joeware</a></td><td style='font-size 12px;'>Insights into AD.</td></tr>
-		<tr><td><td style='width:auto; font-size 12px;'><a href='https://mikecrowley.us/'>Mike Crowley MVP</a></td><td style='font-size 12px;'>PowerShell scripts for Azure and O365.</td></tr>
+		<tr><td><td style='width:auto; font-size 12px; align:left' class=tableContent><a href='https://www.michev.info/'>Michev Blog</a></td><td style='font-size 12px;align:left;' class=tableContent>Advanced PowerShell scripts for Office365</td></tr>
+		<tr><td><td style='width:auto; font-size 12px;' class=tableContent><a href='https://tech.nicolonsky.ch/'>nicolonsky tech</a></td><td style='font-size 12px;align:left;' class=tableContent>Great articles on Graph and securing Azure AD environments.</td></tr>
+		<tr><td><td style='width:auto; font-size 12px;' class=tableContent><a href='https://powershell-guru.com/'>PowerShell Guru</a></td><td style='font-size 12px;align:left;' class=tableContent>Doesn't seem to be updated much anymore but has some excellent articles on what PowerShell commands are the fastest.</td></tr>
+		<tr><td><td style='width:auto; font-size 12px;' class=tableContent><a href='http://terenceluk.blogspot.com/'>Terence Luk</a></td><td style='font-size 12px;align:left;' class=tableContent>Good insites into Exchange and NetScaler, also has articles on Teams.</td></tr>
+		<tr><td><td style='width:auto; font-size 12px;' class=tableContent><a href='https://blog.joeware.net/'>Joeware</a></td><td style='font-size 12px;' class=tableContent>Insights into AD.</td></tr>
+		<tr><td><td style='width:auto; font-size 12px;' class=tableContent><a href='https://mikecrowley.us/'>Mike Crowley MVP</a></td><td style='font-size 12px;' class=tableContent>PowerShell scripts for Azure and O365.</td></tr>
 
 		</table>
         <br><br> 
