--- a/links.html
+++ b/links.html
@@ -90,7 +90,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <div class=content><br>
         A collection of various links.<br><br>
            <table>
-		<tr><td><td style='width:auto; font-size 12px; align:left' class=tableContent><a href='https://www.michev.info/'>Michev Blog</a></td><td style='font-size 12px;align:left;' class=tableContent>Advanced PowerShell scripts for Office365</td></tr>
+		<tr><td><td style='width:300px; font-size 12px; align:left' class=tableContent><a href='https://www.michev.info/'>Michev Blog</a></td><td style='font-size 12px;align:left;' class=tableContent>Advanced PowerShell scripts for Office365</td></tr>
 		<tr><td><td style='width:auto; font-size 12px;' class=tableContent><a href='https://tech.nicolonsky.ch/'>nicolonsky tech</a></td><td style='font-size 12px;align:left;' class=tableContent>Great articles on Graph and securing Azure AD environments.</td></tr>
 		<tr><td><td style='width:auto; font-size 12px;' class=tableContent><a href='https://powershell-guru.com/'>PowerShell Guru</a></td><td style='font-size 12px;align:left;' class=tableContent>Doesn't seem to be updated much anymore but has some excellent articles on what PowerShell commands are the fastest.</td></tr>
 		<tr><td><td style='width:auto; font-size 12px;' class=tableContent><a href='http://terenceluk.blogspot.com/'>Terence Luk</a></td><td style='font-size 12px;align:left;' class=tableContent>Good insites into Exchange and NetScaler, also has articles on Teams.</td></tr>
