--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
      
         <div class=headline>Cleaning up your Windows DNS server</div>
 	      <div class=datestamp>07-Mar-23</div>
-        <div class=headline><br>
+        <div class=content><br>
           Having contracted at a number of companies over the years I've seen my fair share of horror shows with regards DNS. For something so simple it really does have a lot of importance and should be regularly reviewed.<br>
 		<br>
 		In my latest role the DNS setup was quite simple and I'm happy to report DNS scavaging was enabled, so the majority of records were correct and up-to-date.<br><br>
