--- a/oneDriveLocale.html
+++ b/oneDriveLocale.html
@@ -111,32 +111,32 @@ Invoke-PnPQuery <br>
 		<br>
 		           But when we ran this we got an access denied error. The workaround was to temporarily give the admin access to each OneDrive site and then remove the access after:<br>
 		<div class=code>
-		Connect-PnPOnline -url https://mydomain.sharepoint.com/ -interactive
-
-$adminAcctToAdd = "MrAdmin@domain.com" #Admin account we want to add
-#Get OneDrive sites
-$sites=Get-PnPTenantSite -IncludeOneDriveSites -Filter "Url -like '-my.sharepoint.com/personal/'"
-foreach($site in $sites)
-{
-	$s_url = $site.url
-
-	if ($s_url -like "*") 
-	{ 
-   	 	#Add Admin account as an additional site collection adminstrator
-		Set-PnPTenantSite $site.url -Owners $adminAcctToAdd
-			
-		Connect-PnPOnline $site.Url -interactive
-		$web = Get-PnPWeb -Includes RegionalSettings,RegionalSettings.TimeZones
-		$timeZone = $web.RegionalSettings.TimeZones | Where-Object {$_.Id -eq $TimeZoneId}
-		$web.RegionalSettings.LocaleId = $LocaleId
-		$web.RegionalSettings.TimeZone = $timeZone
-		$web.Update()
-		Invoke-PnPQuery
-
-		#Later we can remove the added admin
-		Remove-PnPSiteCollectionAdmin -Owners $adminAcctToAdd
-	}
-}			
+		Connect-PnPOnline -url https://mydomain.sharepoint.com/ -interactive<br>
+<br>
+$adminAcctToAdd = "MrAdmin@domain.com" #Admin account we want to add<br>
+#Get OneDrive sites<br>
+$sites=Get-PnPTenantSite -IncludeOneDriveSites -Filter "Url -like '-my.sharepoint.com/personal/'"<br>
+foreach($site in $sites)<br>
+{<br>
+	$s_url = $site.url<br>
+<br>
+	if ($s_url -like "*") <br>
+	{ <br>
+   	 	#Add Admin account as an additional site collection adminstrator<br>
+		Set-PnPTenantSite $site.url -Owners $adminAcctToAdd<br>
+			<br>
+		Connect-PnPOnline $site.Url -interactive<br>
+		$web = Get-PnPWeb -Includes RegionalSettings,RegionalSettings.TimeZones<br>
+		$timeZone = $web.RegionalSettings.TimeZones | Where-Object {$_.Id -eq $TimeZoneId}<br>
+		$web.RegionalSettings.LocaleId = $LocaleId<br>
+		$web.RegionalSettings.TimeZone = $timeZone<br>
+		$web.Update()<br>
+		Invoke-PnPQuery<br>
+<br>
+		#Later we can remove the added admin<br>
+		Remove-PnPSiteCollectionAdmin -Owners $adminAcctToAdd<br>
+	}<br>
+}	<br>		
 		</div>
 		
 	
