--- a/oneDriveLocale.html
+++ b/oneDriveLocale.html
@@ -90,7 +90,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <div class=headline>Set OneDrive for Business Locale</div>
 	      <div class=datestamp>08-Mar-23</div>
         <div class=content><br>
-         By default all Sharepoint sites in Office365 will default to the en-US locale. This means things like dates and timestamps will be displayed in mm/dd/yyyy format and can cause confusion with users.
+         By default all Sharepoint sites in Office365 will default to the en-US locale. This means things like dates and timestamps will be displayed in mm/dd/yyyy format and can cause confusion for users.
            While Sharepoint sites for Teams can be set with a new default template it seems that this is not possible for user's of OneDrive for Business, with the template instead being read-only.<br>
            <br>
            So it seems you can only do this in one large batch every few months to be workable. To enable this we use PnP PowerShell and assign it the correct Azure AD app permissions needed. The code was as follows:
