--- a/iisQueue.html
+++ b/iisQueue.html
@@ -122,7 +122,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		<div class=ImageCaption>↑ Mapi connections spread evenly across both servers.</div><br>
 			<br>
 	Update: despite balancing the NetScaler the Outlook disconnects still occurred. After a support call with Microsoft we decided to remove the NetScaler and instead use DNS round robin for load balancing. 
-		After this the issue was finally resolved.
+		After this the issue was finally resolved.<br><br>
           </div>
           
           </td>
