--- a/graphMail.html
+++ b/graphMail.html
@@ -52,6 +52,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	.datestamp { font-family:verdana; font-size:10px; color:#564c4d; width:850px; text-align:left; }
 	.imagecaption { font-style: italic; }
 	.imageMain { border: 5px solid #564c4d; }
+	.code { font-family: 'Source Code Pro', monospace; font-size:12px; color:#000; border: 2px solid #000; background-color:#cecece; }
 	    
       </style>
     
@@ -73,7 +74,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<a href="o365migration.html" class=two>O365 Migration Tips</a><br>
 	<a href="o365reporting.html" class=two>Reporting on successful Azure logons</a><br>
 	<a href="iisQueue.html" class=two>IIS Mapi Queue full with NetScaler</a><br>
-        <a href="o365cert.html" class=two>Secure Office365 reports with a certifificate</a><br>
+        <a href="o365cert.html" class=two>Secure Office365 reports with a certificate</a><br>
         <a href="graphMail.html" class=two>Using Graph to send emails with inline images</a><br>
         <a href="charts.html" class=two>Visualizing Graph data with Google Charts</a><br>
         <a href="alwaysOn.html" class=two>Keeping a log of NetScaler AlwaysON connections</a><br>
@@ -155,12 +156,12 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 <br>
 		$addimg = "cid" + ":" + "ie"<br>
 <br>
-		$contentMG += "<-table><-th>Flag><-/th><-/tr>"<br>
+		$contentMG += "&lt;table>&lt;th>Flag>&lt;/th>&lt;/tr>"<br>
 		foreach ($lc in $logCollection)<br>
 		{<br>
 			$l_flag = $lc.flag<br>
 			$l_location = $lc.location<br>
-			$contentMG += "<-tr><-td><img src=cid`:$l_flag><-/td><-/tr>"<br>
+			$contentMG += "&lt;tr>&lt;td>&lt;img src=cid`:$l_flag>&lt;/td>&lt;/tr>"<br>
 		}<br>
 <br>
 		$body  = @{<br>
