--- a/oneDriveLocale.html
+++ b/oneDriveLocale.html
@@ -52,7 +52,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	.datestamp { font-family:verdana; font-size:10px; color:#564c4d; width:850px; text-align:left; }
 	.imagecaption { font-style: italic; }
 	.imageMain { border: 5px solid #564c4d; }
-	    .code { font-family: 'Source Code Pro', monospace; font-size:12px; color:#000; border: 2px solid #000; background-color:#cecece; }
+	    .code { font-family: 'Source Code Pro', monospace; font-size:12px; color:#000; border: 2px solid #000; background-color:#cecece; padding:3px; }
 	    
       </style>
     
