--- a/iisQueue.html
+++ b/iisQueue.html
@@ -74,7 +74,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<a href="o365migration.html" class=two>O365 Migration Tips</a><br>
 	<a href="o365reporting.html" class=two>Reporting on successful Azure logons</a><br>
 	<a href="iisQueue.html" class=two>IIS Mapi Queue full with NetScaler</a><br>
-        <a href="o365cert.html" class=two>Secure Office365 reports with a certifificate</a><br>
+        <a href="o365cert.html" class=two>Secure Office365 reports with a certificate</a><br>
         <a href="graphMail.html" class=two>Using Graph to send emails with inline images</a><br>
         <a href="charts.html" class=two>Visualizing Graph data with Google Charts</a><br>
         <a href="alwaysOn.html" class=two>Keeping a log of NetScaler AlwaysON connections</a><br>
