--- a/o365cert.html
+++ b/o365cert.html
@@ -52,7 +52,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	.datestamp { font-family:verdana; font-size:10px; color:#564c4d; width:850px; text-align:left; }
 	.imagecaption { font-style: italic; }
 	.imageMain { border: 5px solid #564c4d; }
-	    .code { font-family: 'Source Code Pro', monospace; font-size:12px; color:#000; border: 2px solid #000; background-color:#cecece; }
+	    .code { font-family: 'Source Code Pro', monospace; font-size:12px; color:#000; border: 2px solid #000; background-color:#cecece; padding:3px; }
 	    
       </style>
     
@@ -74,7 +74,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	<a href="o365migration.html" class=two>O365 Migration Tips</a><br>
 	<a href="o365reporting.html" class=two>Reporting on successful Azure logons</a><br>
 	<a href="iisQueue.html" class=two>IIS Mapi Queue full with NetScaler</a><br>
-        <a href="o365cert.html" class=two>Secure Office365 reports with a certifificate</a><br>
+        <a href="o365cert.html" class=two>Secure Office365 reports with a certificate</a><br>
         <a href="graphMail.html" class=two>Using Graph to send emails with inline images</a><br>
         <a href="charts.html" class=two>Visualizing Graph data with Google Charts</a><br>
         <a href="alwaysOn.html" class=two>Keeping a log of NetScaler AlwaysON connections</a><br>
