--- a/charts.html
+++ b/charts.html
@@ -95,7 +95,7 @@ Visualising data via a bar chart can be an effective way to report on monthly to
 		But if you have an outlier in your dataset then the chart can become distorted and hard to read.<br>
 		<br>
 		<img src=charts01.png class=ImageMain>
-		<div class=ImageCaption>Basic HTML chart.</div>
+		<div class=ImageCaption>↑ Basic HTML chart.</div>
 		<br>
 		With this in mind I looked for a simple solution without spending a lot time learning Javascript. I finally settled on <a href='https://developers.google.com/chart'>Google Charts</a>, in part because the package should still be around in 10 years time.
 		 There are a number of different charts, some even with animations, but for my puposes I just needed basic bar and pie charts.<br>
@@ -104,13 +104,13 @@ Visualising data via a bar chart can be an effective way to report on monthly to
 		 You can add extra data to a hover over option on each record too, which keeps the chart simple.<br>
 		<br>
 		<img src=charts03.png class=ImageMain>
-		<div class=ImageCaption>We add a record for each hour of the last 24 hours using a PowerShell loop.</div>
+		<div class=ImageCaption>↑ We add a record for each hour of the last 24 hours using a PowerShell loop.</div>
 		<br>
 		
 		Finally, we output the chart onto the page.<br>
 		<br>
 		<img src=charts02.png class=ImageMain>
-		<div class=ImageCaption>Google chart.</div>
+		<div class=ImageCaption>↑ Google chart.</div>
           <br><br> 
            
            
