--- a/alwaysOn.html
+++ b/alwaysOn.html
@@ -87,7 +87,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      
         <div class=headline>Keeping a log of NetScaler AlwaysON connections</div>
 	      <div class=datestamp>02-Mar-23</div>
-        <div class=content>
+        <div class=content><br>
         While there is an option to buy an Citrix reporting add-on my customer did not want the expense of a subscription but still wanted to keep a track on connected clients. 
 		After Covid19 struck the AlwaysOn VPN solution became even more important than before.<br>
 		<br>
