--- a/charts.html
+++ b/charts.html
@@ -90,7 +90,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      
         <div class=headline>Visualizing Graph data with Google Charts</div>
 	      <div class=datestamp>02-Mar-23</div>
-        <div class=content>
+        <div class=content><br>
 Visualising data via a bar chart can be an effective way to report on monthly totals. One of easiest ways of doing this is to create a chart with basic HTML. 
 		But if you have an outlier in your dataset then the chart can become distorted and hard to read.<br>
 		<br>
