--- a/graphMail.html
+++ b/graphMail.html
@@ -89,7 +89,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      
         <div class=headline>Using Graph to send emails with inline image</div>
 	      <div class=datestamp>02-Mar-23</div>
-        <div class=content>
+        <div class=content><br>
           There are number of excellebr>nt <a href='https://tech.nicolonsky.ch/sending-emails-with-modern-auth/'>articles</a> on sending authenticated mail via MS Graph, replacing SMTP relay.
 		       Unfortunately none of them addressed adding inline images as attachment. This can be useful if you need to ensure the images are displayed correctly and don't have a website to host the images.<br>
 		<br>
