--- a/o365migration.html
+++ b/o365migration.html
@@ -92,7 +92,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           &#8226;  MessageCopyForSentAsEnabled and MessageCopyForSendOnBehalfEnabled need to be set on the O365 mailbox even if set on-prem.<br>
           &#8226;  MessageCopyForSentAsEnabled and MessageCopyForSendOnBehalfEnabled <a href='https://docs.microsoft.com/en-us/exchange/troubleshoot/user-and-shared-mailboxes/sent-mail-is-not-saved'>will not work</a> if shared mailbox is on-premise and user mailbox is in O365 and vice-versa.<br>
           <br>
-          <br><b>User Mailboxes</b><br>
+          <b>User Mailboxes</b><br>
 	  &#8226;  Delegated permssions need to be enabled - <a href='https://learn.microsoft.com/en-us/exchange/hybrid-deployment/set-up-delegated-mailbox-permissions'>Set-OrganizationConfig -ACLableSyncedObjectEnabled $True</a> .<br>
           &#8226;  Any additional addresses must be removed - eg user@domain.local.<br>
 	  &#8226;  The mailbox must have a @domain.mail.onmicrosoft.com address.<br>
