--- a/oneDriveLocale.html
+++ b/oneDriveLocale.html
@@ -98,7 +98,6 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		Connect-PnPOnline https://tenant.sharepoint.com/sites/yoursite<br>
 $LocaleId = 6153 # en-ie<br>
 $TimeZoneId = 2 # Dublin<br>
-$LocaleId = 6153 # en-ie<br>
 <br>
 $web = Get-PnPWeb -Includes RegionalSettings,RegionalSettings.TimeZones<br>
 $timeZone = $web.RegionalSettings.TimeZones | Where-Object {$_.Id -eq $TimeZoneId}<br>
@@ -118,24 +117,24 @@ $adminAcctToAdd = "MrAdmin@domain.com" #Admin account we want to add<br>
 $sites=Get-PnPTenantSite -IncludeOneDriveSites -Filter "Url -like '-my.sharepoint.com/personal/'"<br>
 foreach($site in $sites)<br>
 {<br>
-	$s_url = $site.url<br>
+	&nbsp;$s_url = $site.url<br>
 <br>
-	if ($s_url -like "*") <br>
-	{ <br>
-   	 	&nbsp;#Add Admin account as an additional site collection adminstrator<br>
-		&nbsp;Set-PnPTenantSite $site.url -Owners $adminAcctToAdd<br>
+	&nbsp;if ($s_url -like "*") <br>
+	&nbsp;{ <br>
+   	 	&nbsp;&nbsp;#Add Admin account as an additional site collection adminstrator<br>
+		&nbsp;&nbsp;Set-PnPTenantSite $site.url -Owners $adminAcctToAdd<br>
 			<br>
-		&nbsp;Connect-PnPOnline $site.Url -interactive<br>
-		&nbsp;$web = Get-PnPWeb -Includes RegionalSettings,RegionalSettings.TimeZones<br>
-		&nbsp;$timeZone = $web.RegionalSettings.TimeZones | Where-Object {$_.Id -eq $TimeZoneId}<br>
-		&nbsp;$web.RegionalSettings.LocaleId = $LocaleId<br>
-		&nbsp;$web.RegionalSettings.TimeZone = $timeZone<br>
-		&nbsp;$web.Update()<br>
-		&nbsp;Invoke-PnPQuery<br>
+		&nbsp;&nbsp;Connect-PnPOnline $site.Url -interactive<br>
+		&nbsp;&nbsp;$web = Get-PnPWeb -Includes RegionalSettings,RegionalSettings.TimeZones<br>
+		&nbsp;&nbsp;$timeZone = $web.RegionalSettings.TimeZones | Where-Object {$_.Id -eq $TimeZoneId}<br>
+		&nbsp;&nbsp;$web.RegionalSettings.LocaleId = $LocaleId<br>
+		&nbsp;&nbsp;$web.RegionalSettings.TimeZone = $timeZone<br>
+		&nbsp;&nbsp;$web.Update()<br>
+		&nbsp;&nbsp;Invoke-PnPQuery<br>
 <br>
-		&nbsp;#Later we can remove the added admin<br>
-		&nbsp;Remove-PnPSiteCollectionAdmin -Owners $adminAcctToAdd<br>
-	}<br>
+		&nbsp;&nbsp;#Later we can remove the added admin<br>
+		&nbsp;&nbsp;Remove-PnPSiteCollectionAdmin -Owners $adminAcctToAdd<br>
+	&nbsp;}<br>
 }	<br>		
 		</div>
 		
