--- a/centralizedMail.html
+++ b/centralizedMail.html
@@ -108,7 +108,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           Secondly the Microsoft documentation for Hybrid setup says to add the Microsoft addresses to your <a href='https://learn.microsoft.com/en-us/microsoft-365/security/office-365-security/email-authentication-spf-configure?view=o365-worldwide'>SPF file</a>, it does not mention anything about exceptions for centralized mail-flow.<br>
           <br>
           This was a long running case with Microsoft Support but out of it at least came information on no longer using legacy mail filters. 
-          I kinda think if a feature is no longer to be used then really it should also be removed from the GUI and not hidden depp in the documentation, but in the end the issue did at least get resolved.<br>
+          I kinda think if a feature is no longer to be used then really it should also be removed from the GUI and not hidden deep in the documentation, but in the end the issue did at least get resolved.<br>
           <br><br> 
            
            
