--- a/centralizedMail.html
+++ b/centralizedMail.html
@@ -86,7 +86,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
       <tr><td style='height:1px; color:#564c4d; width:100%; border-bottom: 1px solid;' colspan=2></td></tr>
       <tr><td style='text-align:center; width:100%; padding-top:30px; padding-left:30px;' colspan=2>
      
-        <div class=headline>When centralized mail send via O365</div>
+        <div class=headline>When Centralized Mail sends via O365</div>
 	      <div class=datestamp>11-Mar-23</div>
         <div class=content><br>
          <b>Scenario</b><br>
