--- a/centralizedMail.html
+++ b/centralizedMail.html
@@ -99,16 +99,17 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           When Company A sends mails to Company B they always end up in O365 Quarantine. When reviewing the Internet headers we see that the SPF record has failed despite 'centralized mail-flow' being enabled.<br>
           <br>
           <b>Cause</b><br>
-          While in theory the emails coming from Company A should exit via the on-prem Exchange servers, instead if the two tennant in O365 reside in the same datacenter then the mail is routed via O365. 
+          While in theory the emails coming from Company A should exit via the on-prem Exchange servers, instead if the two tennants in O365 reside in the <a href='https://www.enowsoftware.com/solutions-engine/exchange-center/the-curious-logic-behind-some-eop-routing-decisions '>same datacenter</a> then the mail is routed via O365. 
           So the SPF record will fail and the mail will go to Quarantine, but only if the recipient domain has legacy mail filters enabled.<br>
           <br>
           <b>Resolution</b><br>
-          While both companies had issues with the setup, Microsoft Support sided with company A, saying that if the legacy mail filters were removed then the mails would not go to quarantine. 
+          While both companies had issues with the setup, Microsoft Support sided with company A, saying that if the <a href='https://learn.microsoft.com/en-us/microsoft-365/security/office-365-security/anti-spoofing-protection-faq?view=o365-worldwide'>legacy mail filters</a> (in particular the MarkAsSpamSpfRecordHardFail filter) were disabled then the mails would not go to quarantine. 
           This is technically correct but with a couple of caveats, first the Internet headers still show an error, with Microsoft adding an extra authentication field to bypass the error. 
           Secondly the Microsoft documentation for Hybrid setup says to add the Microsoft addresses to your <a href='https://learn.microsoft.com/en-us/microsoft-365/security/office-365-security/email-authentication-spf-configure?view=o365-worldwide'>SPF file</a>, it does not mention anything about exceptions for centralized mail-flow.<br>
           <br>
           This was a long running case with Microsoft Support but out of it at least came information on no longer using legacy mail filters. 
-          I kinda think if a feature is no longer to be used then really it should also be removed from the GUI and not hidden deep in the documentation, but in the end the issue did at least get resolved.<br>
+          I kinda think if a feature is no longer to be used then really it should also be removed from the GUI and not hidden deep in the documentation, but in the end the issue did at least get resolved. 
+	  As a recomendation I would run the 	<br>
           <br><br> 
            
            
