--- a/microsoftSupport.html
+++ b/microsoftSupport.html
@@ -90,7 +90,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <div class=headline>Overview of Microsoft Support cases</div>
 	      <div class=datestamp>11-Mar-23</div>
         <div class=content><br>
-          The following is a breakdown of Microsoft Support calls I've made in the last few years:<br>
+          The following is a breakdown of Microsoft Support calls (28) I've made in the last few years:<br>
           <br>
           <table><tr><th>Date</th><th>Issue</th><th>Resolution</th></tr>
             <tr><td>Jul 2018</td><td>Exchange servers bluescreening</td><td>Windows firewall was enabled for all outgoing connections, this was removed.</td></tr>
@@ -117,12 +117,10 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		  <tr><td>Jun 2021</td><td>Intermittant mail failures.</td><td>Issue with 3rd party certificate.</td></tr>
 		  <tr><td>Jun 2021</td><td>Free/busy not working on-prem to O365.</td><td>Changed URLs.</td></tr>
 		  <tr><td>Nov 2021</td><td>Outlook Mobile setup not working</td><td>Firewall rues needed to be updated for HCW.</td></tr>
-		  <tr><td></td><td></td><td></td></tr>
-		  <tr><td></td><td></td><td></td></tr>
-		  <tr><td></td><td></td><td></td></tr>
-		  <tr><td></td><td></td><td></td></tr>
-		  <tr><td></td><td></td><td></td></tr>
-		  <tr><td></td><td></td><td></td></tr>
+		  <tr><td>Jun 2022</td><td>On-rem delegated user can't release email</td><td>Design change request accepted.</td></tr>
+		  <tr><td>Sep 2022</td><td>Centralized mail flow getting quarantined.</td><td>Mail filter removed.</td></tr>
+		  <tr><td>Oct 2022</td><td>Outlook disconnects on-prem</td><td>Removed NetScaler.</td></tr>
+		  <tr><td>Dec 2022</td><td>Teams calendar missing after mail migration to O365.</td><td>Issue resolved itself after a day.</td></tr>
           </table>
         <br><br> 
            
