--- a/microsoftSupport.html
+++ b/microsoftSupport.html
@@ -100,7 +100,7 @@ table.table1 th, td {
         <div class=content><br>
           The following is a breakdown of Microsoft Support calls (28) I've made in the last few years:<br>
           <br>
-          <table class=table1><tr><th>Date</th><th>Issue</th><th>Resolution</th></tr>
+          <table class=table1><tr><th style='width:40px;'>Date</th><th>Issue</th><th>Resolution</th></tr>
             <tr><td>Jul 2018</td><td>Exchange servers bluescreening</td><td>Windows firewall was enabled for all outgoing connections, this was removed.</td></tr>
             <tr><td>Aug 2018</td><td>Single Exchange server crashing</td><td> Emulex FC Driver "elxfc.sys" needed to be updated.</td></tr>
             <tr><td>Nov 2018</td><td>Exchange servers not responding to network requests</td><td>Caused by the server anti-virus, Trend Micro.</td></tr>
