--- a/microsoftSupport.html
+++ b/microsoftSupport.html
@@ -53,7 +53,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	.imagecaption { font-style: italic; }
 	.imageMain { border: 5px solid #564c4d; }
 	    
-table.table1 th, td {
+.table1 th, td {
 	padding: 2px;
 	font-family:verdana;
 	font-size:12px;
