--- a/microsoftSupport.html
+++ b/microsoftSupport.html
@@ -53,7 +53,16 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	.imagecaption { font-style: italic; }
 	.imageMain { border: 5px solid #564c4d; }
 	    
-.table1 th, td {
+.table1.th {
+	padding: 2px;
+	font-family:verdana;
+	font-size:12px;
+	color:#564c4d;
+	text-align:left;
+	vertical-align:top;
+}
+	    
+.table1.td {
 	padding: 2px;
 	font-family:verdana;
 	font-size:12px;
