--- a/microsoftSupport.html
+++ b/microsoftSupport.html
@@ -104,33 +104,33 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           The following is a breakdown of Microsoft Support calls (28) I've made in the last few years:<br>
           <br>
           <table class=tableone><tr><th style='width:70px;'>Date</th><th>Issue</th><th>Resolution</th></tr>
-            <tr><td>Jul 2018</td><td>Exchange servers bluescreening</td><td>Windows firewall was enabled for all outgoing connections, this was removed.</td></tr>
-            <tr><td>Aug 2018</td><td>Single Exchange server crashing</td><td> Emulex FC Driver "elxfc.sys" needed to be updated.</td></tr>
-            <tr><td>Nov 2018</td><td>Exchange servers not responding to network requests</td><td>Caused by the server anti-virus, Trend Micro.</td></tr>
-            <tr><td>Mar 2019</td><td>Exchange servers dropping connections for Outlook clients</td><td>Not enough memory on active servers.</td></tr>
-            <tr><td>May 2019</td><td>No mailbox to select when migrating to O365</td><td>Azure AD sync had not been updated since Exchange was installed in environment.</td></tr>
+            <tr><td>Jul 2018</td><td>Exchange servers bluescreening.</td><td>Windows firewall was enabled for all outgoing connections, this was removed.</td></tr>
+            <tr><td>Aug 2018</td><td>Single Exchange server crashing.</td><td> Emulex FC Driver "elxfc.sys" needed to be updated.</td></tr>
+            <tr><td>Nov 2018</td><td>Exchange servers not responding to network requests.</td><td>Caused by the server anti-virus, Trend Micro.</td></tr>
+            <tr><td>Mar 2019</td><td>Exchange servers dropping connections for Outlook clients.</td><td>Not enough memory on active servers.</td></tr>
+            <tr><td>May 2019</td><td>No mailbox to select when migrating to O365.</td><td>Azure AD sync had not been updated since Exchange was installed in environment.</td></tr>
             <tr><td>Jun 2019</td><td>Random mails not sent via Outlook with error message.</td><td>User was saving mails to drafts before other user tried to send them.</td></tr>
             <tr><td>Jul 2019</td><td>Hybrid Connection Wizard (HCW) gives error.</td><td>Manually configured and ignored errror.</td></tr>
             <tr><td>Sep 2019</td><td>Advisory on O365 mail-flow</td><td>Advice given.</td></tr>
-            <tr><td>Oct 2019</td><td>Image in email from Notes gave warning</td><td>Set the image size and this resolved the error.</td></tr>
-            <tr><td>Feb 2020</td><td>Mail-flow to shared mailboxes not working</td><td>Shared mailboxes were not synced to Azure AD correctly.</td></tr>
-            <tr><td>Feb 2020</td><td>Teams calendar not showing</td><td>Enabled OAuth in envrionment.</td></tr>
-            <tr><td>Feb 2020</td><td>Group and Mail Contact errors</td><td>Enabled AAD writeback.</td></tr>
-            <tr><td>Feb 2020</td><td>Exchange update broke IIS</td><td>Fixed IIS directories.</td></tr>
-	    <tr><td>Mar 2020</td><td>Hybrid setup with NetScaler failing</td><td>Removed SSL offloading, used SSL bridge mode instead.</td></tr>
-	    <tr><td>Apr 2020</td><td>Outlook not using OAuth</td><td>Bypassed web proxy.</td></tr>
+            <tr><td>Oct 2019</td><td>Image in email from Notes gave warning.</td><td>Set the image size and this resolved the error.</td></tr>
+            <tr><td>Feb 2020</td><td>Mail-flow to shared mailboxes not working.</td><td>Shared mailboxes were not synced to Azure AD correctly.</td></tr>
+            <tr><td>Feb 2020</td><td>Teams calendar not showing.</td><td>Enabled OAuth in envrionment.</td></tr>
+            <tr><td>Feb 2020</td><td>Group and Mail Contact errors.</td><td>Enabled AAD writeback.</td></tr>
+            <tr><td>Feb 2020</td><td>Exchange update broke IIS.</td><td>Fixed IIS directories.</td></tr>
+	    <tr><td>Mar 2020</td><td>Hybrid setup with NetScaler failing.</td><td>Removed SSL offloading, used SSL bridge mode instead.</td></tr>
+	    <tr><td>Apr 2020</td><td>Outlook not using OAuth.</td><td>Bypassed web proxy.</td></tr>
 	    <tr><td>Jul 2020</td><td>Outlook365 slow to open for on-prem users.</td><td>Registry key supplied but not used.</td></tr>
 	    <tr><td>Nov 2020</td><td>Mails to O365 groups fail.</td><td>Groups did not have onmicrosoft.com addresses.</td></tr>
 	    <tr><td>Nov 2020</td><td>Mails deleted from system.</td><td>No resolution.</td></tr>
 	    <tr><td>Nov 2020</td><td>User could not logon to webmail in O365.</td><td>Fixed AAD sync errors for object.</td></tr>
 		  <tr><td>Apr 2021</td><td>DLP not working for mailbox.</td><td>By design, mailbox was on-prem not O365.</td></tr>
-		  <tr><td>Apr 2021</td><td>Teams photo disappears</td><td>Photo took a long time to sync correctly.</td></tr>
+		  <tr><td>Apr 2021</td><td>Teams photo disappears.</td><td>Photo took a long time to sync correctly.</td></tr>
 		  <tr><td>Jun 2021</td><td>Intermittant mail failures.</td><td>Issue with 3rd party certificate.</td></tr>
 		  <tr><td>Jun 2021</td><td>Free/busy not working on-prem to O365.</td><td>Changed URLs.</td></tr>
-		  <tr><td>Nov 2021</td><td>Outlook Mobile setup not working</td><td>Firewall rues needed to be updated for HCW.</td></tr>
-		  <tr><td>Jun 2022</td><td>On-rem delegated user can't release email</td><td>Design change request accepted.</td></tr>
+		  <tr><td>Nov 2021</td><td>Outlook Mobile setup not working.</td><td>Firewall rues needed to be updated for HCW.</td></tr>
+		  <tr><td>Jun 2022</td><td>On-rem delegated user can't release email.</td><td>Design change request accepted.</td></tr>
 		  <tr><td>Sep 2022</td><td>Centralized mail flow getting quarantined.</td><td>Mail filter removed.</td></tr>
-		  <tr><td>Oct 2022</td><td>Outlook disconnects on-prem</td><td>Removed NetScaler.</td></tr>
+		  <tr><td>Oct 2022</td><td>Outlook disconnects on-prem.</td><td>Removed NetScaler.</td></tr>
 		  <tr><td>Dec 2022</td><td>Teams calendar missing after mail migration to O365.</td><td>Issue resolved itself after a day.</td></tr>
           </table>
         <br><br> 
