--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
   <body>
     
     <table style='width:100%; padding:0px; border-collapse: collapse;'>
-      <tr><td style='height:25px; color:#564c4d; width:50%; font-size:25px; font-family:Montserrat, sans-serif; text-align:left;'><img src='giraffe3.png' style='height:55px; padding:10px; vertical-align:middle;'><a href='index.html' class=dropbtn>Graph and PowerShell Blog</a></td>
+      <tr><td style='height:25px; color:#564c4d; width:50%; font-size:25px; font-family:Montserrat, sans-serif; text-align:left;'><a href='index.html' class=dropbtn><img src='giraffe3.png' style='height:55px; padding:10px; vertical-align:middle; border:0px;'>Graph and PowerShell Blog</a></td>
         
         <td style='width:50%; color:#564c4d; font-size:15px; font-family:Montserrat, sans-serif; text-align:right; padding-right:300px;'>
 		
