--- a/setLocale.html
+++ b/setLocale.html
@@ -105,8 +105,8 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 	      <div class=datestamp>12-Mar-23</div>
         <div class=content><br>
           No matter what previous settings have been set you will nearly always end up with a US locale for your app, the following is a list of ways to change the various apps:<br>
-          
-          <table>
+          <br>
+          <table class=tableone>
           <tr><th>App</th><th>Setting</th></tr>
           <tr><td>Teams Client</td><td>Not really possible to do remotely with PowerShell. The package needs to be deployed with the language set</td></tr>
           <tr><td>Teams files in SharePoint</td><td> The SharPoint template can be edited and existing sites updated.</td></tr>
