--- a/microsoftSupport.html
+++ b/microsoftSupport.html
@@ -131,7 +131,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
 		  <tr><td>Jun 2021</td><td>Intermittant mail failures.</td><td>Issue with 3rd party certificate.</td></tr>
 		  <tr><td>Jun 2021</td><td>Free/busy not working on-prem to O365.</td><td>Changed URLs.</td></tr>
 		  <tr><td>Nov 2021</td><td>Outlook Mobile setup not working.</td><td>Firewall rues needed to be updated for HCW.</td></tr>
-		  <tr><td>Jun 2022</td><td>On-rem delegated user can't release email.</td><td>Design change request accepted.</td></tr>
+		  <tr><td>Jun 2022</td><td>On-prem delegated user can't release email.</td><td>Design change request accepted.</td></tr>
 		  <tr><td>Sep 2022</td><td>Centralized mail flow getting quarantined.</td><td>Mail filter removed.</td></tr>
 		  <tr><td>Oct 2022</td><td>Outlook disconnects on-prem.</td><td>Removed NetScaler.</td></tr>
 		  <tr><td>Dec 2022</td><td>Teams calendar missing after mail migration to O365.</td><td>Issue resolved itself after a day.</td></tr>
