--- a/delegateSentItems.html
+++ b/delegateSentItems.html
@@ -92,11 +92,11 @@ a.two:hover {color: #447EAE; text-decoration: none;}
         <div class=headline>Delegate Sent Items placed into external Tenant</div>
 	      <div class=datestamp>12-Mar-23</div>
         <div class=content><br>
-          <b>Senario</b><br>
+          <b>Scenario</b><br>
           You give a user the 'Send As' permission to another user's mailbox and then enable the '<a href='https://learn.microsoft.com/en-us/exchange/recipients-in-exchange-online/manage-user-mailboxes/automatically-save-sent-items-in-delegator-s-mailbox'>Automatically save sent items in delegator's mailbox in Exchange Online</a>'. 
           The sent items appear in both mailboxes as expected. However you also forward all mails from this mailbox to an external mailbox not under your control. The user notices that the sent item also appears in this external mailbox.<br>
           <br>
-	<img src='delegateSentItems01.png' class=class=ImageMain>	
+	<img src='delegateSentItems01.png' class=ImageMain>	
 		<div class=ImageCaption>↑ Mails are forwarded to an external mailbox.</div>
 	<br>	
           <b>Cause</b><br>
