--- a/setLocale.html
+++ b/setLocale.html
@@ -109,7 +109,7 @@ a.two:hover {color: #447EAE; text-decoration: none;}
           <table class=tableone>
           <tr><th>App</th><th>Setting</th></tr>
           <tr><td>Teams Client</td><td>Not really possible to do remotely with PowerShell. The package needs to be deployed with the language set</td></tr>
-          <tr><td>Teams files in SharePoint</td><td> The SharPoint template can be edited and existing sites updated.</td></tr>
+          <tr><td>Teams files in SharePoint</td><td> The SharePoint template can be edited and existing sites updated.</td></tr>
           <tr><td>OneDrive for Business</td><td>No possible to edit the SharePoint template, but possible to change existing sites with PowerShell.</td></tr>
           <tr><td>ExchangeOnline mailbox</td><td>Can be set with PowerShell.</td></tr>
           <tr><td>Azure AD account</td><td>Can be set with PowerShell.</td></tr>
